[ISSUE#23]  Correct the draw of application
Pass Mapviewer object instead of Classificaition object for ol.Map
Change the style of scrollbar

URL: https://github.com/filipedu11/deeapp/issues/21

--- a/workspace/static/css/sidebar.css
+++ b/workspace/static/css/sidebar.css
@@ -139,7 +139,7 @@
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.95);
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 .sidebar-left .sidebar-content {
